load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:prefix github.com/dmorgan81/buzzel
gazelle(name = "gazelle")

go_image(
    name = "image",
    embed = [":buzzel_lib"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:public"],
)

go_library(
    name = "buzzel_lib",
    srcs = ["main.go"],
    importpath = "github.com/dmorgan81/buzzel",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)

go_binary(
    name = "buzzel",
    embed = [":buzzel_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)
