load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cache",
    srcs = [
        "cache.go",
        "lru.go",
        "mem.go",
        "server.go",
    ],
    importpath = "github.com/dmorgan81/buzzel/pkg/cache",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_justinas_alice//:alice",
        "@com_github_nytimes_gziphandler//:gziphandler",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_rs_zerolog//hlog",
        "@com_github_rs_zerolog//log",
    ],
)

go_test(
    name = "cache_test",
    srcs = ["server_test.go"],
    embed = [":cache"],
    deps = ["@com_github_stretchr_testify//assert"],
)
